# vec

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
cmake/: vecConfig.cmake.in
include/vec/: vec.h
src/: vec.c
tests/: test_vec.c
